permissions logic working