@@ -6,6 +6,7 @@ import com.angel.virtual_academy.dto.TokenRefreshResponse;
 import com.angel.virtual_academy.models.RefreshToken;
 import com.angel.virtual_academy.models.User;
 import com.angel.virtual_academy.security.JwtUtils;
+import com.angel.virtual_academy.security.PermissionCacheService;
 import com.angel.virtual_academy.services.AuthService;
 import com.angel.virtual_academy.services.RefreshTokenService;
 import jakarta.servlet.http.Cookie;
@@ -14,6 +15,7 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.authority.SimpleGrantedAuthority; // 1. Added Import
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.util.WebUtils;
 
@@ -26,13 +28,18 @@ public class LoginController {
 
     private final AuthService authService;
     private final JwtUtils jwtUtils;
-    // NEW: We inject our new Refresh Token Service
     private final RefreshTokenService refreshTokenService;
+    private final PermissionCacheService permissionCacheService; // 2. Added to class fields
 
-    public LoginController(AuthService authService, JwtUtils jwtUtils, RefreshTokenService refreshTokenService) {
+    // 3. Injected into constructor
+    public LoginController(AuthService authService,
+                           JwtUtils jwtUtils,
+                           RefreshTokenService refreshTokenService,
+                           PermissionCacheService permissionCacheService) {
         this.authService = authService;
         this.jwtUtils = jwtUtils;
         this.refreshTokenService = refreshTokenService;
+        this.permissionCacheService = permissionCacheService;
     }
 
     @PostMapping("/login")
@@ -42,35 +49,44 @@ public class LoginController {
         // 1. Generate the fast, short-lived Access Token (5 mins)
         String jwt = jwtUtils.generateJwtToken(user.getUsername());
 
-        // 2. NEW: Generate the secure, long-lived Refresh Token in the Database (7 days)
+        // 2. Generate the secure, long-lived Refresh Token in the Database (7 days)
         RefreshToken refreshToken = refreshTokenService.createRefreshToken(user);
 
-        // 3. NEW: Package the Refresh Token into a secure, HttpOnly Cookie
+        // 3. Package the Refresh Token into a secure, HttpOnly Cookie
         ResponseCookie resCookie = ResponseCookie.from("refreshToken", refreshToken.getToken())
                 .httpOnly(true)
                 .secure(false) // Set to 'true' later when you use HTTPS
-                .path("/api/auth") // The browser ONLY sends this cookie when asking for a refresh
+                .path("/api/auth")
                 .maxAge(7 * 24 * 60 * 60) // 7 days
                 .sameSite("Lax")
                 .build();
 
-        // Attach the cookie to the HTTP response headers
+        // 4. THIS WAS MISSING: Attach the cookie to the HTTP response headers!
         response.addHeader(HttpHeaders.SET_COOKIE, resCookie.toString());
 
-        // 4. Return the standard info to the frontend (Same as before)
-        List<String> roles = user.getUserRoles().stream()
-                .map(ur -> ur.getRole().getName())
-                .collect(Collectors.toList());
+        // 5. Get Authorities from the Cache Service (Lowercase 'p')
+        List<String> allAuthorities = permissionCacheService.getAuthoritiesForUser(user.getUsername())
+                .stream()
+                .map(SimpleGrantedAuthority::getAuthority)
+                .toList();
 
+        // 6. Separate Roles and Permissions for the frontend
+        List<String> roles = allAuthorities.stream()
+                .filter(auth -> auth.startsWith("ROLE_"))
+                .toList();
+
+        List<String> permissions = allAuthorities.stream()
+                .filter(auth -> !auth.startsWith("ROLE_"))
+                .toList();
+
+        // 7. Return the updated DTO
         return ResponseEntity.ok(new LoginResponse(
-                "success", "Welcome back, " + user.getUsername() + "!", jwt, user.getUsername(), roles
+                "success", "Welcome back, " + user.getUsername() + "!", jwt, user.getUsername(), roles, permissions
         ));
     }
 
-    // NEW ENDPOINT: The "Repair Shop" for expired Access Tokens
     @PostMapping("/refresh")
     public ResponseEntity<?> refreshToken(HttpServletRequest request) {
-        // 1. Extract the cookie from the incoming request safely
         Cookie cookie = WebUtils.getCookie(request, "refreshToken");
 
         if (cookie == null) {
@@ -79,7 +95,6 @@ public class LoginController {
 
         String requestRefreshToken = cookie.getValue();
 
-        // 2. Verify the token in the DB and generate a new Access Token
         return refreshTokenService.findByToken(requestRefreshToken)
                 .map(refreshTokenService::verifyExpiration)
                 .map(RefreshToken::getUser)
@@ -90,16 +105,13 @@ public class LoginController {
                 .orElseThrow(() -> new RuntimeException("Refresh token is not in database! (It may have been revoked)"));
     }
 
-    // NEW ENDPOINT: The "Kill Switch" to safely log users out
     @PostMapping("/logout")
     public ResponseEntity<?> logout(HttpServletRequest request, HttpServletResponse response) {
         Cookie cookie = WebUtils.getCookie(request, "refreshToken");
         if (cookie != null) {
-            // Delete it from the database so a hacker can't use it
             refreshTokenService.deleteByToken(cookie.getValue());
         }
 
-        // Clear the cookie in the user's browser by setting maxAge to 0
         ResponseCookie cleanCookie = ResponseCookie.from("refreshToken", "")
                 .httpOnly(true)
                 .secure(false)
